# os-labs

./: CMakeLists.txt  README.md  config.txt  main.cpp
deleter_deamon/: Deleter.cpp  Deleter.h
lab1/: CMakeLists.txt  README.md  build.sh  config.conf  main.cpp
lab1/deleter_daemon/: Deleter.cpp  Deleter.h
lab1/deleter_deamon/: Deleter.cpp  Deleter.h
lab1/signal_handlers/: Handlers.cpp  Handlers.h
lab2/: CMakeLists.txt  README.md  build.sh
lab2/src/: goat_state.h
lab2/src/client/: client.cpp  client.h  main.cpp
lab2/src/connections/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mmap.cpp  conn_mmap.h  conn_mq.cpp  conn_mq.h  conn_shm.cpp  conn_shm.h
lab2/src/host/: host.cpp  host.h  main.cpp
lab3/: CMakeLists.txt  README.md  build.sh  config.conf  fine_set.h  main.cpp  tester.h
lab3/src/: fine_set.h  tester.h
