cmake_minimum_required(VERSION 3.22)
set(CMAKE_CXX_STANDARD 17)
project(Deleter_deamon)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
include_directories(${CMAKE_SOURCE_DIR}/deleter_deamon)
# add_executable(Deleter ${CMAKE_SOURCE_DIR}/deleter_deamon/Deleter.cpp)
add_library(Deleter ${CMAKE_SOURCE_DIR}/deleter_deamon/Deleter.h ${CMAKE_SOURCE_DIR}/deleter_deamon/Deleter.cpp)
add_library(SignalHandlers ${CMAKE_SOURCE_DIR}/signal_handlers/Handlers.h ${CMAKE_SOURCE_DIR}/signal_handlers/Handlers.cpp)
add_executable(main ${CMAKE_SOURCE_DIR}/main.cpp)
target_link_libraries(main Deleter)
target_link_libraries(main SignalHandlers)